# maestroetry

./: .env  .gitignore  CLAUDE.md  README.md  eval_checkpoints.py  export_web_data.py  main.py  pyproject.toml
.claude/skills/notarai-bootstrap/: SKILL.md
.claude/skills/notarai-reconcile/: SKILL.md
.github/workflows/: deploy-web.yml
.notarai/: README.md  data-pipeline.spec.yaml  encoders.spec.yaml  maestroetry.spec.yaml  model.spec.yaml  notarai.spec.json  projection.spec.yaml  reconciliation_state.json  training.spec.yaml  web-demo.spec.yaml
configs/: default.toml  run1-dropout-only.toml  run10.toml  run11.toml  run12.toml  run13.toml  run14.toml  run15.toml  run2-deeper-heads.toml  run2.toml  run3-unfreeze-2.toml  run3.toml  run4-unfreeze-4.toml  run5-cosine-schedule.toml  run6-spec-augment.toml  run7-multicaption.toml  run9.toml
docs/: TRAINING_LOG.md
scripts/: upload-demo-audio.sh
src/maestroetry/: __init__.py  config.py  dataset.py  encoders.py  evaluate.py  ingest.py  loss.py  model.py  projection.py  train.py
tests/: test_config.py  test_dataset.py  test_encoders.py  test_ingest.py  test_loss.py  test_model.py  test_projection.py
web/: .prettierrc  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css
web/src/lib/components/: LoadingOverlay.svelte  Ornament.svelte  SearchBar.svelte  SimilarFinder.svelte  TrackCard.svelte
web/src/lib/inference/: projection.ts  similarity.ts  worker.ts
web/src/lib/stores/: model.svelte.ts  tracks.ts
web/src/routes/: +layout.svelte  +page.svelte
