[project]
name = "maestroetry"
version = "0.1.0"
description = "Contrastive text-audio retrieval model inspired by CLIP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.3.0",
    "tensorboard>=2.20.0",
    "transformers>=5.3.0",
]

[tool.uv]
conflicts = [
    [{ group = "cpu" }, { group = "cu128" }],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cu128", group = "cu128" },
]
torchaudio = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cu128", group = "cu128" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maestroetry"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poe.tasks.run]
cmd = "uv run ${ARGS}"
help = "Run a command via uv run with UV_NO_SYNC=1"

[tool.poe.tasks.run.env]
# Necessary because of https://github.com/astral-sh/uv/issues/12429
UV_NO_SYNC = "1"

[tool.poe.tasks.sync-gpu-ingest]
cmd = "uv sync --group cu128 --group ingest"
help = "Sync dependencies with GPU (CUDA 12.8) and ingest support"

[tool.poe.tasks.sync-gpu]
cmd = "uv sync --group cu128"
help = "Sync dependencies with GPU (CUDA 12.8) support"

[tool.poe.tasks.sync-cpu]
cmd = "uv sync --group cpu"
help = "Sync dependencies with CPU-only support"

[tool.poe.tasks.sync-cpu-ingest]
cmd = "uv sync --group cpu --group ingest"
help = "Sync dependencies with CPU and ingest support"

[dependency-groups]
cpu = [
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
]
cu128 = [
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
]
ingest = [
    "datasets>=3.0.0",
    "soundfile>=0.13.0",
]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
